# receptor_utils

./: .gitignore  LICENSE  README.md  novel_allele_name.py  setup.cfg  setup.py
docs/: airrc_sets_with_10x.rst  airrc_sets_with_igblast.rst  airrc_sets_with_mixcr.rst  annotate_j.rst  at_coords.rst  conf.py  create_alignment.rst  custom_igblast.rst  download_germline_set.rst  extract_refs.rst  fix_macaque_gaps.rst  gap_sequences.rst  index.rst  introduction.rst  make_igblast_ndm.rst  make_leader_fasta.rst  modules.rst  name_allele.rst  receptor_utils.rst  rev_comp.rst  scripts.rst
docs/_build/doctrees/: airrc_sets_with_10x.doctree  airrc_sets_with_igblast.doctree  airrc_sets_with_mixcr.doctree  annotate_j.doctree  at_coords.doctree  create_alignment.doctree  custom_igblast.doctree  download_germline_set.doctree  environment.pickle  extract_refs.doctree  fix_macaque_gaps.doctree  gap_sequences.doctree  identical_seqs.doctree  index.doctree  introduction.doctree  make_igblast_ndm.doctree  make_leader_fasta.doctree  make_mixcr_json.doctree  (+7 more)
receptor_utils.egg-info/: PKG-INFO  SOURCES.txt
src/receptor_utils/: __init__.py  annotate_j.py  at_coords.py  aux_formats.py  check_aux.py  check_fastas.py  check_ndm.py  extract_refs.py  gap_inferred.py  identical_seqs.py  make_igblast_ndm.py  name_allele.py  novel_allele_name.py  number_ighv.py  number_v.py  reverse_complement.py  sequence_alignment.py  simple_bio_seq.py
src/receptor_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scripts/: annotate_j.py  at_coords.py  create_alignment.py  download_germline_set.py  extract_refs.py  fix_macaque_gaps.py  gap_inferred.py  identical_seqs.py  make_igblast_ndm.py  make_leader_fasta.py  make_mixcr_json.py  merge_fasta.py  name_allele.py  reverse_complement.py
tests/: .gitignore  CAST_IGLV.fasta  Homo_sapiens_IGHV_gapped.fasta  Homo_sapiens_IGK.aux  Homo_sapiens_IGK.ndm  Homo_sapiens_IGL.aux  Homo_sapiens_IGL.ndm  Human.json  Human_IGH_VDJ_rev_2.json  Human_IGH_VDJ_rev_2.ndm  Human_IGKappa_VJ_rev_1.json  Human_IGKappa_VJ_rev_1.ndm  Human_IGLambda_VJ_rev_1.aux  Human_IGLambda_VJ_rev_1.json  Human_IGLambda_VJ_rev_1.ndm  IGHV3-20.04.fasta  IMGT_IGLV_gapped.fasta  Mus_musculus_IGK.ndm  Mus_musculus_IGK_V.fasta  Mus_musculus_IGK_V_gapped.fasta  Mus_musculus_IGLJ_(all_strains)_IGL.aux  None_J.fasta  V.fasta  V_gapped.fasta  cdr3 notes  download_germline_set_test_summaries.txt  first.fasta  foo.aux  foo.ndm  igblast_human_gl.aux  ighv_from_fasta.ndm  jh_annotations.aux  jh_annotations.csv  jh_seqs.fasta  test_gapped.fasta  test_novels.fasta  test_scored_gap_consensus.py
tests/igblast_walkthrough/: HD13M_db-fail.tsv  HD13M_db-fail_ogrdb.tsv  Homo_sapiens_IGH.aux  Homo_sapiens_IGH.ndm  Homo_sapiens_IGH_D.ndb  Homo_sapiens_IGH_D.nhr  Homo_sapiens_IGH_D.nin  Homo_sapiens_IGH_D.njs  Homo_sapiens_IGH_D.nos  Homo_sapiens_IGH_D.nsq  Homo_sapiens_IGH_J.ndb  Homo_sapiens_IGH_J.nhr  Homo_sapiens_IGH_J.nin  Homo_sapiens_IGH_J.njs  Homo_sapiens_IGH_J.nos  Homo_sapiens_IGH_J.nsq  Homo_sapiens_IGH_V.ndb  Homo_sapiens_IGH_V.nhr  Homo_sapiens_IGH_V.nin  Homo_sapiens_IGH_V.njs  Homo_sapiens_IGH_V.nos  Homo_sapiens_IGH_V.not  Homo_sapiens_IGH_V.nsq  Homo_sapiens_IGH_V.nto  imgt_Homo_sapiens_IGHV_gapped.fasta  imgt_Homo_sapiens_IGKV_gapped.fasta  imgt_Homo_sapiens_IGLV_gapped.fasta  imgt_all_J.fasta  imgt_all_V_gapped.fasta
tests/mixcr_walkthrough/: HD13M.align.report.json  HD13M.align.report.txt  HD13M.alignments.vdjca  HD13M.assemble.report.json  HD13M.assemble.report.txt  HD13M.clns  HD13M.qc.json  HD13M.qc.txt  Homo_sapiens_IGH_D.fasta.mifdx  Homo_sapiens_IGH_J.fasta.mifdx  Homo_sapiens_IGH_V.fasta.mifdx
(+69 files in other folders)
