[metadata]
name = receptor_utils
version = 0.0.25
author = William Lees
author_email = william@lees.org.uk
description = Some tools I find useful for working with Ig receptor sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/williamdlees/receptor_utils
project_urls =
    Bug Tracker = https://github.com/williamdlees/receptor_utils/issues
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gap_inferred = receptor_utils.gap_inferred:main
    extract_refs = receptor_utils.extract_refs:main
    identical_seqs = receptor_utils.identical_seqs:main
    make_igblast_ndm = receptor_utils.make_igblast_ndm:main
    annotate_j = receptor_utils.annotate_j:main
    rev_comp = receptor_utils.reverse_complement:main
    name_allele = receptor_utils.name_allele:main
    at_coords = receptor_utils.at_coords:main
