[metadata]
name = receptor_utils
version = 0.0.34
author = William Lees
author_email = william@lees.org.uk
description = Some tools I find useful for working with Ig receptor sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/williamdlees/receptor_utils
project_urls =
    Bug Tracker = https://github.com/williamdlees/receptor_utils/issues
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gap_sequences = scripts.gap_inferred:main
    extract_refs = scripts.extract_refs:main
    identical_seqs = scripts.identical_seqs:main
    make_igblast_ndm = scripts.make_igblast_ndm:main
    annotate_j = scripts.annotate_j:main
    rev_comp = scripts.reverse_complement:main
    name_allele = scripts.name_allele:main
    at_coords = scripts.at_coords:main
