[metadata]
name = receptor_utils
version = 0.0.53
author = William Lees
author_email = william@lees.org.uk
description = Some tools I find useful for working with Ig receptor sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/williamdlees/receptor_utils
project_urls =
    Bug Tracker = https://github.com/williamdlees/receptor_utils/issues
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    biopython>=1.81
    requests>=2.28


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    name_allele = scripts.name_allele:main
    gap_sequences = scripts.gap_inferred:main
    make_igblast_ndm = scripts.make_igblast_ndm:main
    annotate_j = scripts.annotate_j:main
    extract_refs = scripts.extract_refs:main
    fix_macaque_gaps = scripts.fix_macaque_gaps:main
    identical_seqs = scripts.identical_seqs:main
    rev_comp = scripts.reverse_complement:main
    at_coords = scripts.at_coords:main
    merge_fasta = scripts.merge_fasta:main
    download_germline_set = scripts.download_germline_set:main


